--- a/cluster-autoscaler/ca-cluster.yaml
+++ b/cluster-autoscaler/ca-cluster.yaml
@@ -12,19 +12,19 @@ availabilityZones: ["us-east-1a", "us-east-1b", "us-east-1c"]
 managedNodeGroups:
 - name: nodegroupA
   desiredCapacity: 1
-  availabilityZones: us-east-1a
+  availabilityZones: ["us-east-1a"]
   instanceType: t3.small
   ssh:
     enableSsm: true
 - name: nodegroupB
   desiredCapacity: 1
-  availabilityZones: us-east-1b
+  availabilityZones: ["us-east-1b"]
   instanceType: t3.small
   ssh:
     enableSsm: true
 - name: nodegroupC
   desiredCapacity: 1
-  availabilityZones: us-east-1c
+  availabilityZones: ["us-east-1c"]
   instanceType: t3.small
   ssh:
     enableSsm: true
